# vnpy_duckdb

./: .gitignore  README.md  duckdb_database.py  pyproject.toml
vnpy_duckdb/: __init__.py  duckdb_database.py
